# eos-vm-exercise

./: CMakeLists.txt  common.cmake
contracts/: CMakeLists.txt
contracts/exit/: main.cpp
contracts/hello/: main.cpp
contracts/print_string/: main.cpp
depends/: CMakeLists.txt
depends/eos-vm/: CMakeLists.txt  backend.patch  cmake-system.patch
driver/: CMakeLists.txt  counting_visitor.hpp  debug_interpret_visitor.hpp  main.cpp  static_analysis_visitor.hpp
